# infoviz-sose-20

./: .gitignore  README.md  flake.nix
.reuse/: dep5
02-dear-data/: build-svg.hs  dear-data.svg.png.license
04-create-a-visualization/: .gitignore  assignment-04.html  assignment-04.ipynb  shell.nix  vega.json
datadossier/: README.md  preview.png.license
datadossier/crawler/: default.nix  index.js  module.nix  node-env.nix  node-packages.nix  package.json  shell.nix
datadossier/diagram/: .gitignore  jpeg.sh  raster.sh  shell.nix
datadossier/diagram/cache/: .gitignore  2020-06-18-filter91.json  2020-06-18-filter96.json  2020-06-19-filter91.json  2020-06-19-filter96.json  2020-06-22-filter91.json  2020-06-22-filter96.json  2020-06-23-filter91.json  2020-06-23-filter96.json  2020-06-24-filter91.json  2020-06-24-filter96.json  2020-06-25-filter91.json  2020-06-25-filter96.json  2020-06-26-filter91.json  2020-06-26-filter96.json  2020-06-29-filter91.json  2020-06-29-filter96.json  2020-06-30-filter91.json  2020-06-30-filter96.json  2020-07-01-filter91.json  2020-07-01-filter96.json  2020-07-02-filter91.json  2020-07-02-filter96.json  2020-07-03-filter91.json  2020-07-03-filter96.json  2020-07-06-filter91.json  2020-07-06-filter96.json  2020-07-07-filter91.json  2020-07-07-filter96.json  (+16 more)
datadossier/extract-from-raw/: Main.hs  shell.nix
datadossier/reference-tracks/: .gitignore  Cargo.nix  Cargo.toml  shell.nix
datadossier/reference-tracks/src/: main.rs
datadossier/website/: index.markdown  style.css
dear-data/: build-svg.hs  shell.nix
(+7 files in other folders)
