# SPDX-FileCopyrightText: 2020 Justin Humm <mail@erictapen.name>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "build-reference-tracks"
version = "0.1.0"
authors = ["Justin Humm <justin.humm@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
geo = "*"
docopt = "*"